[package]
edition      = "2024"
name         = "pomodoro_cube"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "pomodoro_cube"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "log-04", "unstable"] }

esp-rtos = { version = "0.2", features = [
  "embassy",
  "esp-alloc",
  "esp32s3",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4", features = ["esp32s3", "log-04"] }
log                    = "0.4"

embassy-executor = { version = "0.9", features = ["log"] }
embassy-time     = { version = "0.5", features = ["log"] }
esp-alloc        = "0.9.0"
esp-println      = { version = "0.16", features = ["esp32s3", "log-04"] }

critical-section = "1.2"
static_cell      = "2.1"

smart-leds       = "0.4"
esp-hal-smartled = { version = "0.17", features = ["esp32s3"] }
embedded-hal = "1"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
